[project]
name = "practise-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncio>=4.0.0",
    "dotenv>=0.9.9",
    "langchain>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.6.6",
    "mcp>=1.13.1",
]
